fixed intial quote block overlap something still wrong with its properties began finishing basic layout of site page

--- a/style/style.css
+++ b/style/style.css
@@ -24,6 +24,7 @@ a {
    align-items: flex-start;
     background-color: #1F2937;
     color: azure;
+    max-height: 400px;
 }
 
 .welcome {
@@ -40,6 +41,7 @@ button {
     color: azure;
     border: white;
     border-radius: 10px;
+    font-family: 'Courier New', Courier, monospace
 }
 
 .contents {
@@ -50,10 +52,11 @@ button {
 .content {
     max-width: auto;
     max-height: 300px;
-    margin-left: 850px;
+    margin-left: 650px;
     position: relative;
-    top: -350px;
+    top: -290px;
     border: 5px solid black;
+    border-radius: 10px;
 }
 .logo {
     max-width: auto;
@@ -70,6 +73,13 @@ h1 {
     font-weight: 700px;
 }
 
+.random {
+    background-color: azure;
+    display: block;
+    flex-direction: row;
+    height: 500px;
+}
+
 h2 {
     background-color: azure;
     display: flex;
@@ -83,7 +93,7 @@ h2 {
     width: auto;
     height: 150px;
     justify-content: center;
-
+    margin-bottom: 140px;
 }
 
 .text {
@@ -92,11 +102,44 @@ h2 {
     padding: 10px;
 }
 
-.quote {
+.layer {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    background-color: green;
+    width: auto;
+    height: 400px;
+}
+.quote {
     background-color: #1F2937;
     color: #E5E7EB;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 48px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 50px;
+
+}
+
+.cta {
+    background-color: white;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+}
+
+.bt {
+    background-color: blue;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+    width: 700px;
+    margin-top: 20px;
+    justify-content: center;
+    border-radius: 20px;
+}
+
+.cr {
+    background-color: #1F2937;
+    display: flex;
+    flex-direction: row;
+    height: 75px;
+
 }
